#162 : Cleanup powermock JDK 17 illegal access permissions